Added Vertex editing